apps/002-stateless-web-app/003_Service_NodePort.yaml
### NodePort is a set of iptables rules that expose a port inside a container on the node where the container is running as well as
### make the port accessible from an IP of any node in the cluster
### Reference: https://kubernetes.io/docs/concepts/services-networking/service/#type-nodeport
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app
  namespace: stateless-apps
spec:
  ports:
  - name: app-http
    port: 80
    protocol: TCP
    targetPort: app-http
#    targetPort: 80
  selector:
    app: my-app
    type: web-app
  type: NodePort
