apps/002-stateless-web-app/005_Service_ClusterIP.yaml
### ClusterIP is a set of iptables rules and a DNS record. It gives your set of Pods (that belong to the same Deployment,
### StatefulSet, etc.) a common IP that can be accessed from within the cluster as well as a common DNS nams wich resolves to
### IP addresses of all Pods (A record)
### Reference: https://kubernetes.io/docs/concepts/services-networking/service/
apiVersion: v1
kind: Service
metadata:
  labels:
    app: my-app
  name: my-app-cluster-ip
  namespace: stateless-apps
spec:
  ports:
  - name: app-http
    port: 80
    protocol: TCP
    targetPort: app-http
#    targetPort: 80
  selector:
    app: my-app
    type: web-app
  type: ClusterIP
