apps/002-stateless-web-app/006_Ingress_ClusterIP.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: my-app
  name: my-app-cluster-ip
  namespace: stateless-apps
spec:
#  ingressClassName: nginx-test
  rules:
    - host: site.ingress-via-cluster-ip.example
      http:
        paths:
        - backend:
            service:
              name: my-app-cluster-ip
              port:
                name: app-http
          path: /
          ### With this path type, matching is up to the IngressClass
          pathType: ImplementationSpecific
